--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,19 @@
 {
   "storage": {
     "rules": "build"
+  },
+  "hosting": {
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
