Firebase host set

--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,6 @@
 {
-  "storage": {
-    "rules": "build"
-  },
   "hosting": {
-    "public": "public",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
